# wt-manager

./: .gitignore  Cargo.toml  README.md  install.sh  wt-wrapper.sh
src/: db.rs  git.rs  i18n.rs  main.rs  setup.rs  tui.rs  worktree.rs
