[package]
name = "wt-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
ratatui = "0.28"
crossterm = "0.28"
fuzzy-matcher = "0.3"
ctrlc = "3.4"

[[bin]]
name = "wt"
path = "src/main.rs"
